# linked_list

./: CMakeLists.txt
inc/: Functions.h  Structures.h
src/: CMakeLists.txt  Functions.c
tests/: CMakeLists.txt  LinkedListTests.cpp
